tests/application/ingress/application-force-internal.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: force-internal
spec:
  image: image
  port: 8080
  ingresses:
    - test.com
  ingressSettings:
    - hostname: test.com
      forceInternal: true
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: force-internal-gwapi
spec:
  image: image
  port: 8080
  ingresses:
    - testagain.com
  ingressSettings:
    - hostname: testagain.com
      forceInternal: true
  routingProvider: Standard
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: force-internal-gwapi-customsecret
spec:
  image: image
  port: 8080
  ingresses:
    - testmore.com+testsecret
  ingressSettings:
    - hostname: testmore.com
      forceInternal: true
