tests/application/ingress/application-ingress-multiple-ports.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingress-multiple-ports
spec:
  image: scratch
  port: 8080
  additionalPorts:
    - name: metrics
      port: 8082
      protocol: TCP
  ingresses:
    - example.com
    - test.com
  redirectToHTTPS: true
