tests/application/ingress/application-is-ext-int.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: isintext
spec:
  image: image
  port: 8080
  ingresses:
    - test.kartverket.cloud
  isInternal: false
