tests/application/ingress/application-is-external.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: isexternal
spec:
  image: image
  port: 8080
  ingresses:
    - test.com
