tests/application/ingress/application-is-internal-sk.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: isinternalsk
spec:
  image: image
  port: 8080
  ingresses:
    - test.dev.skip.statkart.no
