tests/application/ingress/application-is-internal-vanity.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: internalvanity
spec:
  image: image
  port: 8080
  ingresses:
  - hostname: test.kartverket.no
    internal: true
