tests/application/ingress/application-is-internal.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: isinternal
spec:
  image: image
  port: 8080
  ingresses:
    - test.skip.statkart.no
