tests/application/ingress/ingress-validation.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses-space
spec:
  image: scratch
  port: 8080
  ingresses:
    - example com
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses-capital
spec:
  image: scratch
  port: 8080
  ingresses:
    - TEST.com
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses-empty
spec:
  image: scratch
  port: 8080
  ingresses:
    - ""
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses-no-domain
spec:
  image: scratch
  port: 8080
  ingresses:
    - test
