tests/application/ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    istio.io/dataplane-mode: ambient
