tests/application/ingress/patch-application-change-ingress.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses
spec:
  image: scratch
  port: 8080
  ingresses:
    - test.com
    - foo.com
  redirectToHTTPS: true
