tests/application/ingress/patch-application-no-ingresses.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: ingresses
spec:
  image: scratch
  port: 8080
  ingresses: []
