tests/application/ingress/application-is-ext-int-assert.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: isinteext-ingress-9d69b0860e1ec343
spec:
  selector:
    app: istio-ingress-external
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isinteext
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-gateways
      podSelector:
        matchLabels:
          app: istio-ingress-external
  podSelector:
    matchLabels:
      app: isinteext
