tests/application/ingress/application-is-internal-assert.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: isinternal-ingress-74d65c46d5467250
spec:
  selector:
    app: istio-ingress-internal
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isinternal
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-gateways
      podSelector:
        matchLabels:
          app: istio-ingress-internal
  podSelector:
    matchLabels:
      app: isinternal
