tests/application/ingress/application-is-internal-vanity-assert.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internalvanity-ingress-dc2b250f77a411ad
spec:
  selector:
    app: istio-ingress-internal
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internalvanity
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-internal
  podSelector:
    matchLabels:
      app: internalvanity
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internalvanity
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-internal
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app: internalvanity
  policyTypes:
    - Ingress
