tests/application/ingress/05-delete-application.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete-application
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: skiperator.kartverket.no/v1alpha1
      kind: Application
      name: ingresses
  - delete:
      apiVersion: skiperator.kartverket.no/v1alpha1
      kind: Application
      name: ingress-multiple-ports
