tests/application/ingress/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ingress
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespace: ingress
  steps:
    - try:
        - apply:
            file: namespace.yaml
        - create:
            file: application.yaml
        - assert:
            file: application-assert.yaml
        - apply:
            file: patch-application-change-ingress.yaml
        - assert:
            file: patch-application-change-ingress-assert.yaml
        - error:
            file: patch-application-change-ingress-errors.yaml
        - apply:
            file: patch-application-no-ingresses.yaml
        - error:
            file: patch-application-no-ingresses-errors.yaml
        - apply:
            file: patch-application-disable-redirect.yaml
        - assert:
            file: patch-application-disable-redirect-assert.yaml
    - try:
        - create:
            file: application-ingress-multiple-ports.yaml
        - assert:
            file: application-ingress-multiple-ports-assert.yaml
    - try:
        - apply:
            file: ingress-validation.yaml
        - assert:
            file: ingress-validation-assert.yaml
    - try:
        - create:
            file: application-is-internal.yaml    
        - assert:
            file: application-is-internal-assert.yaml
    - try:
        - create:
            file: application-is-internal-sk.yaml    
        - assert:
            file: application-is-internal-sk-assert.yaml
    - try:
        - create:
            file: application-is-external.yaml    
        - assert:
            file: application-is-external-assert.yaml
    - try:
        - create:
            file: application-force-internal.yaml
        - assert:
            file: application-force-internal-assert.yaml
